fixed the logo spacing on intro heading

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -672,7 +672,13 @@ section#contact {
     margin-left: -5px;
     margin-right: -7px;
   }
+}
 
+.intro-heading {
+  .dot{
+    margin-left: -20px;
+    margin-right: -20px;
+  }
 }
 
 section#contact::-webkit-input-placeholder {
